--- a/desafios/estilo/style.css
+++ b/desafios/estilo/style.css
@@ -61,6 +61,10 @@ font-family: var(--font3);
 font-size: 3.5vw;
 }
 
+section > p{
+padding-bottom: 2em;
+}
+
 section.normal{
 background-color: white;
 color: black;
@@ -69,12 +73,25 @@ color: black;
 section.imagem{
 background-color: rgb(58, 56, 56);
 color: white;
+box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.532);
+background-size: cover;
+background-attachment: fixed;
 }
 
 section.imagem > p{ 
 display: inline-block; 
 padding: 5px;  
-background-color: rgba(0, 0, 0, 0.244);
+background-color: rgba(0, 0, 0, 0.466);
+text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+background-image: url('../d012/imagens/background001.jpg');
+background-position: right center;
+}
+
+section#img02{
+background-image: url('../d012/imagens/background002.jpg');
 }
 
 footer{
