--- a/Exercicios/ex026/mq002/estilos/retrato.css
+++ b/Exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,7 @@
 @charset "UTF-8";
+/* Configurações em pé */
 
-/* Aparelho em pé (retrato) */
+body{
+background-image: url(../imagens/cev-portrait.jpg);
+background-position: center bottom;
+}
